# infrahub-vscode

./: .pylintrc  .vale.ini  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  tasks.py  towncrier.toml  tsconfig.json
.claude/: commands
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-implement.yml  claude.yml  issue-plan.yml  issue-triage.yml  publish.yml  sync-docs.yml
.vale/styles/: spelling-exceptions.txt
changelog/: 14.added  30.added.md  36.added.md  46.changed.md  55.added.md  7.added  9.added  branch.fixed.md  contributing.added.md  filewatchers.fixed.md  lint.fixed.md  vscode-version.fixed.md
dev/: README.md
dev/adr/: 0001-plain-tsc-over-bundler.md  0002-infrahub-sdk-integration.md  0003-yaml-ast-parser.md  README.md  template.md
dev/commands/: review.md
dev/explorations/: README.md
dev/guidelines/: documentation.md  git-workflow.md  typescript.md
dev/guides/: add-command.md  add-tree-view-provider.md  local-development.md
dev/knowledge/: architecture.md  server-communication.md  tree-views.md  yaml-processing.md
dev/prompts/: bug-analysis.md
dev/specs/: README.md  template.md
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.js  sidebars.js.map  sidebars.ts
docs/docs/: index.mdx
snippets/: python.json  yaml.json
src/: YamlDefinitionProvider.ts  YamlDocumentSymbolProvider.ts  extension.ts
src/common/: commands.ts  infrahub.ts  infrahubctlChecker.ts  utilities.ts
src/treeview/: InfrahubServerTreeViewProvider.ts  (+2 more)
(+19 files in other folders)
