[tool.poetry]
name = "infrahub-vscode"
version = "1.0.0"
description = ""
authors = ["OpsMill <info@opsmill.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, < 3.13"
invoke = "^2.1.2"
jsonschema = "4.25.1"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"
ruff = "^0.13.0"
mypy = "^1.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
