[tool.poetry]
name = "infrahub-vscode"
version = "1.0.0"
description = ""
authors = ["OpsMill <info@opsmill.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, < 3.13"
invoke = "^2.2.1"
jsonschema = "4.26.0"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.38.0"
ruff = "^0.14.14"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
